k8s/flaskapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapi-deployment
  labels:
    app: flaskapi
    app.kubernetes.io/instance: flaskapi-instance
    app.kubernetes.io/name: flaskapi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flaskapi
  template:
    metadata:
      labels:
        app: flaskapi
    spec:
      containers:
        - name: flaskapi
          image: flask-api
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
