k8s/flaskapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flaskapi
    app.kubernetes.io/instance: flaskapi-instance
    app.kubernetes.io/name: flaskapi
  name: flaskapi-service
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: flaskapi
  type: ClusterIP
