k8s/flaskapi-route.yaml

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Validate=false
    openshift.io/host.generated: "true"
  name: flaskapi-route
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: flaskapi-service
    weight: 100
  wildcardPolicy: None
